# liblouis

./: .dockerignore  .gitignore  .travis.yml  ANNOUNCEMENT  AUTHORS  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.i386  Dockerfile.win32  Dockerfile.win64  Eindtekst-zonder-voorblad-dec-2005.doc  HACKING  Makefile.am  NEWS  README  README.md  SECURITY.md  TODO  UIB-additional-rules.doc  UIB-intro.docx  bb.edn  configure.ac  contractSpanishTest.yaml  copyright-notice.cmt  copyright-notice.txt  de-ch-g1-dictionary-rt.yaml  de-ch-g2-dictionary-rt.yaml  de-g0-bd-dictionary.yaml  de-g0-bd-misc.yaml  de-g0-bd-specs.yaml  de-g0-dictionary-rt.yaml  de-g0-misc.yaml  es-g2.ctb  es-g2.yaml  huc6-u+0000-u+ffff.tbi  huc6-u+10000-u+1ffff.tbi  huc6-u+100000-u+10ffff.tbi  huc6-u+20000-u+2ffff.tbi  huc6-u+30000-u+3ffff.tbi  (+36 more)
doc/: Makefile.am  bugs.mdwn  comments.mdwn  documentation.mdwn  downloads.mdwn  forum.mdwn  gnu.css  index.mdwn  liblouis.css  liblouis.texi  links.mdwn  magit.css  news.mdwn  presentations.mdwn  reset.css  sidebar.mdwn  simple-css-switch.js  tag.mdwn  todo.mdwn  users.mdwn
doc/bugs/: Translating___34__---.com__34___with_UEBC-g2.ctb_causes_infinite_loop.mdwn  Wrong_Greek_alphabets_translation_in_zh-tw.ctb.mdwn  correct_with_swapcc_fails_on_last_char_of_string.mdwn  cursor_offset_calculation_errors_when_table_defines_capsign.mdwn  done.mdwn  letsign_depends_on_previous_line.mdwn  memory_leak_in_resolveSubtable_and_defaultTableResolver.mdwn  underline_in_context_opcode_does_not_work_when_bracket_is_empty.mdwn
doc/documentation/: check-list_for_table_contributors.mdwn  liblouis.html  liblouisutdml.html
doc/forum/: How_to_start_file2brl_on_raspbian__63__.mdwn
doc/magit-themes/: black-on-white.css  default-high-contrast.css  default.css  solarized-dark-xterm.css
doc/posts/: 2009-01-21-release-1.5.0.mdwn  2009-02-01-release-1.8.0.mdwn  2009-03-04-release-1.6.0.mdwn  2009-03-04-release-1.9.0.mdwn  2009-04-21-release-1.6.1.mdwn  2009-04-21-release-1.9.1.mdwn  2009-05-01-release-1.6.2.mdwn  2009-08-21-release-1.7.0.mdwn  2009-08-21-release-2.0.0.mdwn  2009-11-23-release-1.8.0.mdwn  2009-11-23-release-2.1.0.mdwn  2010-06-29-release-1.9.0.mdwn  2010-07-06-release-2.0.0.mdwn  2010-08-19-release-2.1.0.mdwn  2010-08-23-release-2.1.1.mdwn  2011-01-19-release-2.2.0.mdwn  2011-05-09-release-2.3.0.mdwn  2011-05-11-release-2.4.0.mdwn  2012-01-18-article-about-john-boyer.mdwn  2012-01-31-release-2.4.0.mdwn  2012-02-22-release-2.4.1.mdwn  2012-09-10-release-2.5.0.mdwn  2012-09-24-release-2.5.1.mdwn  2012-12-18-release-2.5.2.mdwn  2013-06-21-release-2.5.3.mdwn  2014-03-03-release-2.5.4.mdwn  2014-05-06-maintainership-succession.mdwn  2014-05-07_changing_version_control_system_to_git.mdwn  2014-08-08_meeting_agenda_and_minutes.mdwn  2014-09-01-release-2.6.0.mdwn  braille_embossers_should_accept_utf-8_unicode_braille.mdwn  check-list_for_table_contributors.mdwn  minimum_set_of_tests_for_a_table.mdwn  mission_statement.mdwn  mission_statement_contributing_rules_author_guide.mdwn  test.mdwn
doc/presentations/: liblouisPaper.org  liblouisSlides.org
doc/tag/: liblouis2.6.mdwn  liblouis3.0.mdwn
doc/todo/: 2014-04-30_-_feedback_to_adi_re_new_hebrew_table.mdwn  2014-04-30_-_feedback_to_ronan_re_new_irish_table.mdwn  2014-04-30_-_feedback_to_yuemei_re_translation_tables_from_viewplus.mdwn  Add_Greg__39__s_tables_for_Cherokee__44___Afrikaans_and_Maori.mdwn  Add___34__alwaysletsign__34___opcode.mdwn  Improve_website_looks.mdwn  Table_development_tools.mdwn  add_python-nose_to_configure.ac.mdwn  cherokee_afrikaans_maori_hawaiian.mdwn  command_line_tools_logging.mdwn  continuous_integration.mdwn  convert_documentation_from_texi_to_markdown.mdwn  deduplicate_ueb_tables.mdwn  done.mdwn  dutch.mdwn  ensure_no_commits_are_lost_from_bitbucket_old_repo.mdwn  factor_out_logging_and_printing_functions.mdwn  formal_braille_spec_repo.mdwn  improve_and_merge_compBrlLeftCursor_and_compBrlAtCursor.mdwn  liblouis_3.0.mdwn  port_Google_code_issues_over_to_ikiwiki.mdwn  replace_manual_memory_checks_with_gnulib_xmalloc.mdwn  runharness_should_provide_option_for_Condensed_output.mdwn  simplify_harness_tests_datastructure.mdwn  table_header.mdwn  translatable_table_names.mdwn  write_documentation_for_code_contributors.mdwn  write_documentation_for_code_reviewers.mdwn  write_documentation_for_table_contributors.mdwn  write_documentation_for_table_reviewers.mdwn
doc/users/: bert.frees.mdwn  bfrees.mdwn  cegli.mdwn  christian.egli.mdwn  hammer.attila.mdwn  james.teh.mdwn  jboyer.mdwn  john.boyer.mdwn  mesar.hameed.mdwn  mhameed.mdwn  michael.whapples.mdwn
liblouis/: Makefile.am  commonTranslationFunctions.c  compileTranslationTable.c  findTable.c  internal.h  liblouis.c  liblouis.h.in  logging.c  lou_backTranslateString.c  lou_translateString.c  louis.h  maketable.c  metadata.c  pattern.c  project.clj  transcommon.ci  utils.c  wrappers.c
liblouis/clj/: utils.clj
lua/: .gitignore  Makefile.am  README  lua_louis.c
lua/examples/: test.lua
tests/: Makefile.am  attributeNames.c  backtranslate_with_letsign.c  backtranslation_emphasis.c  brl_checks.c  brl_checks.h  capitalized_with_sentance.c  capitalized_word.c  charToFallbackDots.c  checkTable.c  check_all_tables.pl  check_metadata.c  check_ueb_test_data.c  class_limit.c  compbrlAtCursor.c  deep_include.c  emphclass.c  en_gb_g1_italics.c  findTable.c  getTable.c  hash_collision.c  hyphenate_achena.c  hyphenate_alderen.c  hyphenate_braille.c  hyphenate_xxx.c  infiniteTranslationLoop.c  inpos_compbrl.c  letterDefTest.c  line_length_limit.c  logging.c  new_caps_behavior  outpos.c  ovd.yaml  present_progressive.c  smi.yaml  suggestChunks.c  sv.yaml  test_exhaustive.py  test_tablepath.c  typeform.c  (+2 more)
tests/braille-specs/: Cop-Eg.yaml  Makefile.am  Pl-Pl-g1_backward.yaml  Pl-Pl-g1_harness.yaml  Transliterated-Cuneiform.yaml  afr-za-g2.yaml  akk-borger.yaml  akk-sumero-Xsux.yaml  akk.yaml  ancient-languages-de.yaml  ancient-languages-us.yaml  ar-ar-comp8.yaml  ar-ar-g1.yaml  ba.yaml  bel.yaml  bg.yaml  bn.yaml  cop-us-lit6dot.yaml  cop.yaml  critical-apparatus.yaml  (+210 more)
(+1080 files in other folders)
