doc_DATA = \
	liblouis.html \
	liblouis/index.html \
	liblouis.txt

CLEANFILES = \
	liblouis.html \
	liblouis/Automated-Testing-of-Translation-Tables.html \
	liblouis/Back_002dtranslation-with-Liblouis.html \
	liblouis/Braille-Indicator-Opcodes.html \
	liblouis/Character_002dClass-Opcodes.html \
	liblouis/Character_002dDefinition-Opcodes.html \
	liblouis/Computer-braille.html \
	liblouis/Concept-Index.html \
	liblouis/Data-structure-of-liblouis-tables.html \
	liblouis/Deprecation-of-the-logging-system.html \
	liblouis/Emphasis-Opcodes.html \
	liblouis/Emphasis-classes.html \
	liblouis/Emphasis-indicators.html \
	liblouis/Function-Index.html \
	liblouis/General-Notes.html \
	liblouis/How-tables-are-found.html \
	liblouis/How-to-Write-Translation-Tables.html \
	liblouis/Hyphenation-Tables.html \
	liblouis/Inline-definition-of-tables.html \
	liblouis/Introduction.html \
	liblouis/Letter-indicator.html \
	liblouis/Miscellaneous-Opcodes.html \
	liblouis/Note-about-fallback-behavior.html \
	liblouis/Notes-on-Back_002dTranslation.html \
	liblouis/Opcode-Index.html \
	liblouis/Opcodes-for-Standing-Alone-Sequences.html \
	liblouis/Overview-_0028library_0029.html \
	liblouis/Overview.html \
	liblouis/Permanent-indicator.html \
	liblouis/Phrase-indicator.html \
	liblouis/Program-Index.html \
	liblouis/Programming-with-liblouis.html \
	liblouis/Python-bindings.html \
	liblouis/Query-Syntax.html \
	liblouis/Special-Processing-Opcodes.html \
	liblouis/Special-Symbol-Opcodes.html \
	liblouis/Swap-Opcodes.html \
	liblouis/Table-Metadata.html \
	liblouis/Testing-Translation-Tables-interactively.html \
	liblouis/The-Context-and-Multipass-Opcodes.html \
	liblouis/The-correct-Opcode.html \
	liblouis/The-match-Opcode.html \
	liblouis/Translation-Opcodes.html \
	liblouis/Word-indicator.html \
	liblouis/YAML-Tests.html \
	liblouis/after-opcode.html \
	liblouis/always-opcode.html \
	liblouis/attribute-opcode.html \
	liblouis/base-opcode.html \
	liblouis/before-opcode.html \
	liblouis/begcaps-opcode.html \
	liblouis/begcapsword-opcode.html \
	liblouis/begcomp-opcode.html \
	liblouis/begemph-opcode.html \
	liblouis/begemphphrase-opcode.html \
	liblouis/begemphword-opcode.html \
	liblouis/begmidword-opcode.html \
	liblouis/begmode-opcode.html \
	liblouis/begmodeword-opcode.html \
	liblouis/begnum-opcode.html \
	liblouis/begword-opcode.html \
	liblouis/capsletter-opcode.html \
	liblouis/capsmodechars-opcode.html \
	liblouis/capsnocont-opcode.html \
	liblouis/common-options.html \
	liblouis/comp6-opcode.html \
	liblouis/compbrl-opcode.html \
	liblouis/context-opcode.html \
	liblouis/contraction-opcode.html \
	liblouis/correct-opcode.html \
	liblouis/decpoint-opcode.html \
	liblouis/digit-opcode.html \
	liblouis/display-opcode.html \
	liblouis/emphclass-opcode.html \
	liblouis/emphletter-opcode.html \
	liblouis/emphmodechars-opcode.html \
	liblouis/endcaps-opcode.html \
	liblouis/endcapsword-opcode.html \
	liblouis/endcomp-opcode.html \
	liblouis/endemph-opcode.html \
	liblouis/endemphphrase-after-opcode.html \
	liblouis/endemphphrase-before-opcode.html \
	liblouis/endemphword-opcode.html \
	liblouis/endmode-opcode.html \
	liblouis/endmodeword-opcode.html \
	liblouis/endnum-opcode.html \
	liblouis/endword-opcode.html \
	liblouis/exactdots-opcode.html \
	liblouis/grouping-opcode.html \
	liblouis/hyphen-opcode.html \
	liblouis/include-opcode.html \
	liblouis/index.html \
	liblouis/joinnum-opcode.html \
	liblouis/joinword-opcode.html \
	liblouis/largesign-opcode.html \
	liblouis/lenemphphrase-opcode.html \
	liblouis/letsign-opcode.html \
	liblouis/letter-opcode.html \
	liblouis/litdigit-opcode.html \
	liblouis/lou_005fallround.html \
	liblouis/lou_005fbackTranslate.html \
	liblouis/lou_005fbackTranslateString.html \
	liblouis/lou_005fcharSize.html \
	liblouis/lou_005fcharToDots.html \
	liblouis/lou_005fcheckhyphens.html \
	liblouis/lou_005fchecktable.html \
	liblouis/lou_005fcheckyaml.html \
	liblouis/lou_005fcompileString.html \
	liblouis/lou_005fdebug.html \
	liblouis/lou_005fdotsToChar.html \
	liblouis/lou_005ffindTable.html \
	liblouis/lou_005ffree.html \
	liblouis/lou_005fgetDataPath.html \
	liblouis/lou_005fgetTable.html \
	liblouis/lou_005fgetTypeformForEmphClass.html \
	liblouis/lou_005fhyphenate.html \
	liblouis/lou_005findexTables.html \
	liblouis/lou_005flogEnd.html \
	liblouis/lou_005flogFile.html \
	liblouis/lou_005flogPrint.html \
	liblouis/lou_005freadCharFromFile.html \
	liblouis/lou_005fregisterLogCallback.html \
	liblouis/lou_005fsetDataPath.html \
	liblouis/lou_005fsetLogLevel.html \
	liblouis/lou_005ftrace.html \
	liblouis/lou_005ftranslate-_0028program_0029.html \
	liblouis/lou_005ftranslate.html \
	liblouis/lou_005ftranslateString.html \
	liblouis/lou_005fversion.html \
	liblouis/lowercase-opcode.html \
	liblouis/lowword-opcode.html \
	liblouis/match-opcode.html \
	liblouis/math-opcode.html \
	liblouis/midendnumericmodechars-opcode.html \
	liblouis/midendword-opcode.html \
	liblouis/midnum-opcode.html \
	liblouis/midword-opcode.html \
	liblouis/modeletter-opcode.html \
	liblouis/multind-opcode.html \
	liblouis/noback-opcode.html \
	liblouis/nocont-opcode.html \
	liblouis/nocontractsign-opcode.html \
	liblouis/nocross-opcode.html \
	liblouis/noemphchars-opcode.html \
	liblouis/nofor-opcode.html \
	liblouis/noletsign-opcode.html \
	liblouis/noletsignafter-opcode.html \
	liblouis/noletsignbefore-opcode.html \
	liblouis/nonumsign-opcode.html \
	liblouis/numericmodechars-opcode.html \
	liblouis/numericnocontchars-opcode.html \
	liblouis/numsign-opcode.html \
	liblouis/partword-opcode.html \
	liblouis/pattern-expression-syntax.html \
	liblouis/postpunc-opcode.html \
	liblouis/prepunc-opcode.html \
	liblouis/prfword-opcode.html \
	liblouis/punctuation-opcode.html \
	liblouis/repeated-opcode.html \
	liblouis/rependword-opcode.html \
	liblouis/replace-opcode.html \
	liblouis/repword-opcode.html \
	liblouis/seqafterchars-opcode.html \
	liblouis/seqafterpattern-opcode.html \
	liblouis/seqbeforechars-opcode.html \
	liblouis/seqdelimiter-opcode.html \
	liblouis/sign-opcode.html \
	liblouis/space-opcode.html \
	liblouis/sufword-opcode.html \
	liblouis/swapcc-opcode.html \
	liblouis/swapcd-opcode.html \
	liblouis/swapdd-opcode.html \
	liblouis/syllable-opcode.html \
	liblouis/translation_002dtables.html \
	liblouis/typeform-parameter.html \
	liblouis/undefined-opcode.html \
	liblouis/uppercase-opcode.html \
	liblouis/valid-attribute-characters.html \
	liblouis/virtual-dots.html \
	liblouis/word-opcode.html \
	liblouis.txt

EXTRA_DIST = \
	reset.css \
	gnu.css \
	liblouis.css \
	magit.css \
	magit-themes/default.css \
	magit-themes/default-high-contrast.css \
	magit-themes/solarized-dark-xterm.css \
	magit-themes/black-on-white.css \
	simple-css-switch.js \
	$(CLEANFILES)

info_TEXINFOS = liblouis.texi

# generate one big html file
AM_MAKEINFOHTMLFLAGS = --no-headers --no-split --css-ref=liblouis.css

# from https://github.com/magit/magit/blob/main/docs/Makefile
HTML_FIXUP_CSS    = 's|<link rel="stylesheet" type="text/css" href="../liblouis.css">|\
<link rel="stylesheet" href="../magit.css">\n\
<link class="s-css-s--style" rel="stylesheet alternate" title="Default"               href="../liblouis.css">\n\
<link class="s-css-s--style" rel="stylesheet alternate" title="Magit"                 href="../magit-themes/default.css">\n\
<link class="s-css-s--style" rel="stylesheet alternate" title="Magit high contrast"   href="../magit-themes/default-high-contrast.css">\n\
<link class="s-css-s--style" rel="stylesheet alternate" title="Solarized dark xterm"  href="../magit-themes/solarized-dark-xterm.css">\n\
<link class="s-css-s--style" rel="stylesheet alternate" title="Black on white"        href="../magit-themes/black-on-white.css">\n\
<script src="../simple-css-switch.js"></script>|'
HTML_FIXUP_ONLOAD = 's|<body lang="en">|<body lang="en" onload="simpleCssSwitch()">|'
HTML_FIXUP_MENU   = '/<\/body>/i<div id="s-css-s--menu"></div>'

# generate multiple html pages
liblouis/index.html: liblouis.texi
	rm -rf $(dir $@)
	mkdir -p $(dir $@)
	$(MAKEINFO) --html $< -o $(dir $@) --css-ref=../liblouis.css
	@for f in $$(find liblouis -name '*.html') ; do \
	sed -i -e $(HTML_FIXUP_CSS) -e $(HTML_FIXUP_ONLOAD) -e $(HTML_FIXUP_MENU) $$f ; \
	done
	perl -0777 -i.original -pe \
	     's~(CLEANFILES =).*?(EXTRA_DIST)~\1'"$$(printf ' \\\\\n\t%s' liblouis.html $$(find $(dir $@) -name '*.html' | sed 's~//~/~' | sort) liblouis.txt)"'\n\n\2~is' \
	     Makefile.am
	rm Makefile.am.original

SUFFIXES                = .txt

.texi.txt:
	$(MAKEINFO) --plaintext $< -o $@
